Ajout Main.scala - orchestration des parties